--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -1,3 +1,5 @@
 <div id="app-container" class="container">
-  <tree-root [nodes]="nodes" [options]="options"></tree-root>
+  <div *ngIf="nodes.length > 0">
+    <tree-root [nodes]="nodes" [options]="options" (getChildren)="getChildren"></tree-root>
+  </div>
 </div>
