Tree support and modals for create child, edit, and delete actions

--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -1,5 +1,25 @@
 <div id="app-container" class="container">
   <div *ngIf="nodes.length > 0">
-    <tree-root [nodes]="nodes" [options]="options" (getChildren)="getChildren"></tree-root>
-  </div>
+    <tree-root [nodes]="nodes" [options]="options"></tree-root>
+  </div>  
 </div>
+
+<context-menu>
+  <ng-template contextMenuItem (execute)="handleEdit($event.item)">
+    Edit
+  </ng-template>
+  <ng-template contextMenuItem (execute)="handleCreate($event.item)">
+    Add
+  </ng-template>
+  <ng-template contextMenuItem (execute)="handleDelete($event.item)">
+    Delete
+  </ng-template>
+</context-menu>
+
+<ng-template #confirmTemplate>
+  <div class="modal-body text-center">
+    <p>Are you sure?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()" >Yes</button>
+    <button type="button" class="btn btn-primary" (click)="bsModalRef.hide()" >No</button>
+  </div>
+</ng-template>
