--- a/uasdm-web/src/main/ng2/src/app/management/modals/create-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/create-modal.component.html
@@ -1,8 +1,8 @@
 <form>
-  <div *ngIf="node != null" class="modal-body ">
+  <div *ngIf="entity != null" class="modal-body ">
     <div class="form-group">
       <label for="nameInput">Name</label>
-      <input  [(ngModel)]="node.name" name="name" type="input" class="form-control" id="nameInput" placeholder="Name" required>
+      <input  [(ngModel)]="entity.name" name="name" type="input" class="form-control" id="nameInput" placeholder="Name" required>
     </div>
     <div>
       <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()">Ok</button>
