--- a/uasdm-web/src/main/ng2/src/app/management/modals/create-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/create-modal.component.html
@@ -1,5 +1,16 @@
 <form>
-  <div *ngIf="entity != null" class="modal-body ">
+  
+  <div *ngIf="entity != null" class="modal-body">
+    <div *ngIf="message != null" class="error-container">
+      <div class="label-holder">
+        <strong>Error</strong>
+      </div>
+      <div class="holder">
+        <div>
+          <p class="error-message">{{message}}</p>
+        </div>
+      </div>
+    </div>
     <div class="form-group">
       <label for="nameInput">Name</label>
       <input  [(ngModel)]="entity.name" name="name" type="input" class="form-control" id="nameInput" placeholder="Name" required>
