--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -1,4 +1,7 @@
+<uasdm-header></uasdm-header>
+
 <div id="app-container" class="container">
+
   <div *ngIf="nodes.length > 0">
     <tree-root [nodes]="nodes" [options]="options"></tree-root>
   </div>  
