--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -8,13 +8,13 @@
 </div>
 
 <context-menu>
-  <ng-template contextMenuItem (execute)="handleEdit($event.item)">
-    Edit
+  <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)">
+    Edit {{item?.data.name}}
   </ng-template>
-  <ng-template contextMenuItem (execute)="handleCreate($event.item)">
-    Add
+  <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)">
+    Add 
   </ng-template>
-  <ng-template contextMenuItem (execute)="handleDelete($event.item)">
-    Delete
+  <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
+    Delete {{item?.data.name}}
   </ng-template>
 </context-menu>
