dynamic logged in indicator

--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -21,7 +21,7 @@
       </ul>
       
       <div class="navbar-right">
-        <p class="navbar-text">Logged in as <b style="color:white;">Admin</b></p>
+        <p class="navbar-text">Logged in as <b style="color:white;">{{userName}}</b></p>
       </div>
       
     </div>
