--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -12,7 +12,7 @@
     Edit {{item?.data.name}}
   </ng-template>
   <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)">
-    Add 
+    Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}}
   </ng-template>
   <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
     Delete {{item?.data.name}}
