Added a loading bar for communicating with the server

--- a/uasdm-web/src/main/ng2/src/app/uasdm-app.component.html
+++ b/uasdm-web/src/main/ng2/src/app/uasdm-app.component.html
@@ -1,6 +1,7 @@
 <div id="innerFrameHtml">        
   <!-- MAIN CONTENT AND INJECTED VIEWS -->
   <div id="main">
+    <loading-bar></loading-bar>>
     <router-outlet></router-outlet>
   </div>
 </div>
