--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -3,8 +3,8 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" routerLink="/" [title]="Header"><img [src]="context + '/logo/view?id=logo'" /></a>
-        <a class="navbar-brand" routerLink="/data">UAS Site Data Management</a>
+        <a class="navbar-brand" href="{{context}}/prism/home#/menu" [title]="Header"><img [src]="context + '/logo/view?id=logo'" /></a>
+        <a class="navbar-brand" href="{{context}}/prism/home#/menu">UAS Site Data Management</a>
       </div>
           
       <ul class="nav navbar-nav navbar-right">
