--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -14,6 +14,7 @@
           </a>    
           <ul *dropdownMenu class="dropdown-menu">
             <li role="menuitem"><a class="dropdown-item" routerLink="/projects" routerLinkActive="active">Projects</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/upload" routerLinkActive="active">Upload</a></li>
 <!--             <li role="menuitem"><a class="dropdown-item" routerLink="/" routerLinkActive="active">Help</a></li> -->
             <li role="menuitem"><a class="dropdown-item" href="{{context}}/session/logout">Log out</a></li>
           </ul>
