--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import '~angular-tree-component/dist/angular-tree-component.css';
+@import '~fine-uploader/fine-uploader/fine-uploader-new.min.css';
 
 .node-content-wrapper, .tree-children {
   position: relative;
