--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -1,5 +1,9 @@
 @import '~angular-tree-component/dist/angular-tree-component.css';
 
+.tree {
+  height: calc(100vh - 70px);
+}
+
 .node-content-wrapper, .tree-children {
   position: relative;
   font-size: 18px;
