--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -13,6 +13,7 @@
             Project<span class="caret"></span>
           </a>    
           <ul *dropdownMenu class="dropdown-menu">
+            <li role="menuitem"><a class="dropdown-item" routerLink="/profile" routerLinkActive="active">Profile</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/projects" routerLinkActive="active">Projects</a></li>
             <li role="menuitem"><a class="dropdown-item" routerLink="/upload" routerLinkActive="active">Upload</a></li>
 <!--             <li role="menuitem"><a class="dropdown-item" routerLink="/" routerLinkActive="active">Help</a></li> -->
