--- a/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
@@ -100,7 +100,7 @@
                               <th scope="row">{{i + 1}}</th> 
                               <td>{{action.type}}</td> 
                               <td>{{action.description}}</td> 
-                              <td>{{action.createdDate}}</td> 
+                              <td>{{action.createDate}}</td> 
                               <td>{{action.lastUpdatedDate}}</td> 
                             </tr> 
                           </tbody> 
