Support for uploading metadata files

--- a/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
@@ -56,9 +56,11 @@
                 <h2>Your tasks</h2>
                 
                 <hr>
-                <alert *ngFor="let message of messages" type="danger" (click)="handleMessage(message)">
-                  {{message.message}}
-                </alert>
+                <a href="#" *ngFor="let message of messages">
+                  <alert type="danger" (click)="handleMessage(message)" >
+                    {{message.message}}
+                  </alert>
+                </a>
                                 
                 <div class="panel-group">
                   <div *ngFor="let task of tasks; let i=index" class="panel panel-default">
@@ -77,6 +79,7 @@
                           <li>Created on: <b>{{task.createDate}}</b></li>
                           <li>Last update: <b>{{task.lastUpdatedDate}}</b></li> 
                           <li>Status: <b>{{task.status}}</b></li>
+                          <li>Message: <b>{{task.message}}</b></li>
                         </ul>
                         
                         <hr>
