--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -39,7 +39,7 @@
       <div class="form-group" *ngIf="values.create === true">
         <label for="nameInput">Name</label>
         <input [(ngModel)]="values.name" name="name" type="input" class="form-control" id="nameInput" placeholder="Name" required>
-      </div>      
+      </div>
       <div class="form-group" *ngIf="values.create === false">
         <label for="collection">Collection:</label>
         <select name="collection" [attr.disabled]="values.mission == null ? '' : null" (change)="onCollectionSelect($event.target.value)">
@@ -50,7 +50,7 @@
     </div>
     <div class="col">
       <div #uploader></div>
-      <button type="button" [ngClass]="{disabled : (values.collection == null && values.name == null)}" class="btn btn-primary" (click)="handleUpload($event)">
+      <button type="button" [ngClass]="{disabled : (values.collection == null && values.name == null || disabled)}" class="btn btn-primary" (click)="handleUpload($event)">
         <i class="icon-upload icon-white"></i> Upload
       </button>
     </div>
