added docs link

--- a/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
@@ -31,7 +31,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">Resources</div>
             <div class="panel-body">
-              <i class="fa fa-link" style="font-size: 20px;">&#32; Help Docs</i>
+              <a target="_blank" href="https://terraframe.atlassian.net/wiki/spaces/OSMRE/overview"><i class="fa fa-link" style="font-size: 20px;">&#32; Help Docs</i></a>
             </div>
           </div>
           
@@ -77,7 +77,6 @@
                           <li>Created on: <b>{{task.createDate}}</b></li>
                           <li>Last update: <b>{{task.lastUpdatedDate}}</b></li> 
                           <li>Status: <b>{{task.status}}</b></li>
-                          <li>Description: <b>{{task.description}}</b></li>
                           <li>Message: <b>{{task.message}}</b></li>
                         </ul>
                         
