--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -27,3 +27,9 @@
     Delete {{item?.data.name}}
   </ng-template>
 </context-menu>
+
+<context-menu #objectMenu>
+  <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)">
+    Download {{item?.data.name}}
+  </ng-template>
+</context-menu>
