--- a/uasdm-web/src/main/ng2/src/app/management/search.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/search.component.html
@@ -16,11 +16,11 @@
         </div>
   
         <div class="list-group" *ngIf="results">
-          <div class="list-group-item" *ngFor="let result of results | slice:0:9">
+          <div class="list-group-item" *ngFor="let result of results">
             <span *ngIf="result.filename == null"><i class="fa fa-folder-open"></i></span>
             <span *ngIf="result.filename != null"><i class="fa fa-file"></i></span>
           
-            <a href="{{ result.latest }}" target="_blank">
+            <a (click)="handleClick($event, result)">
               {{ result.filename || result.hierarchy[result.hierarchy.length -1].label}}
             </a>
             
