Rename the root menu button to 'Menu', reduced wait time when expanding to node

--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -10,7 +10,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li dropdown>
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-            Project<span class="caret"></span>
+            Menu<span class="caret"></span>
           </a>    
           <ul *dropdownMenu class="dropdown-menu">
             <li role="menuitem"><a class="dropdown-item" routerLink="/tasks" routerLinkActive="active">Tasks</a></li>
