--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -1,10 +1,14 @@
 <uasdm-header></uasdm-header>
 
 <div id="app-container" class="container">
-
-  <div *ngIf="nodes.length > 0" class="tree">
-    <tree-root [nodes]="nodes" [options]="options"></tree-root>
-  </div>  
+  <div class="row">
+    <h2>Project Management</h2>
+  </div>
+  <div class="row">
+    <div *ngIf="nodes.length > 0" class="tree">
+      <tree-root [nodes]="nodes" [options]="options"></tree-root>
+    </div>  
+  </div>
 </div>
 
 <context-menu #nodeMenu>
@@ -25,11 +29,5 @@
   </ng-template>
   <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
     Delete {{item?.data.name}}
-  </ng-template>
-</context-menu>
-
-<context-menu #objectMenu>
-  <ng-template contextMenuItem let-item (execute)="handleDownload($event.item)">
-    Download {{item?.data.name}}
   </ng-template>
 </context-menu>
