--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -1,4 +1,4 @@
-<uasdm-header></uasdm-header>
+<uasdm-header [title]="'Data Upload'"></uasdm-header>
 
 <div id="app-container" class="container">
   <div *ngIf="sites.length > 0" class="row">
