--- a/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
@@ -1,4 +1,4 @@
-<uasdm-header></uasdm-header>
+<uasdm-header [title]="'Tasks'"></uasdm-header>
 
 <div id="app-container" class="container">
     <div class="row">
