--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -4,12 +4,12 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="{{context}}/prism/home#/menu" title="Home"><img [src]="context + '/logo/view?id=logo'" /></a>
-        <a class="navbar-brand" href="{{context}}/prism/home#/menu">UAS Site Data Management</a>
+        <p class="navbar-brand" style="margin: 0;" >{{title}}</p>
       </div>
           
       <ul class="nav navbar-nav navbar-right">
         <li dropdown>
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
+          <a class="dropdown-toggle" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
             Menu<span class="caret"></span>
           </a>    
           <ul *dropdownMenu class="dropdown-menu">
