--- a/uasdm-web/src/main/ng2/src/app/management/viewer.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/viewer.component.html
@@ -1,9 +1,9 @@
-<uasdm-header></uasdm-header>
+<uasdm-header [title]="'Data viewer'"></uasdm-header>
 
 <div id="app-container" class="container">
-  <div class="row">
-    <h2>Data viewer </h2>
-  </div>
+<!--   <div class="row"> -->
+<!--     <h2>Data viewer </h2> -->
+<!--   </div> -->
   <div class="row">
     <div *ngIf="nodes.length > 0" class="tree">
       <tree-root [nodes]="nodes" [options]="options"></tree-root>
