--- a/uasdm-web/src/main/ng2/src/app/management/viewer.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/viewer.component.html
@@ -6,7 +6,13 @@
 <!--   </div> -->
   <div class="row">
     <div *ngIf="nodes.length > 0" class="tree">
-      <tree-root [nodes]="nodes" [options]="options"></tree-root>
+      <tree-root [nodes]="nodes" [options]="options">
+        <ng-template #treeNodeTemplate let-node let-index="index">
+          <span>{{ node.data.name }}</span>
+          <i class="fa fa-folder" *ngIf="!isData(node)"></i>
+          <i class="fa fa-file-photo-o" *ngIf="isData(node)"></i>
+        </ng-template>
+      </tree-root>
     </div>  
   </div>
 </div>
