small style change on uploader

--- a/uasdm-web/src/main/ng2/src/styles/styles.scss
+++ b/uasdm-web/src/main/ng2/src/styles/styles.scss
@@ -87,3 +87,7 @@ tree-node-expander{
 .breadcrumb {
   padding: 2px;
 }
+
+.qq-upload-status-text-selector.qq-upload-status-text {
+  float: right;
+}
