adding more contectual info to uploads

--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -2,7 +2,7 @@
 
 <div id="app-container" class="container">
   <div *ngIf="sites.length > 0" class="row">
-    <div class="col">
+    <div class="col" [hidden]="disabled">
       <div class="form-group">
         <label for="site">Site:</label>
         <select name="site" (change)="onSiteSelect($event.target.value)">
@@ -49,6 +49,42 @@
       </div>
     </div>
     <div class="col">
+    
+      <div *ngIf="currentTask" class="panel panel-success" style="margin: 30px 0 30px 0;">
+        <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
+          <div class="panel-body">
+            <h4>Message: <b> {{currentTask.message}} </b></h4>
+            <h4>Upload Started On: <b> {{currentTask.createDate}} </b></h4>
+            <h4>Last Updated: <b> {{currentTask.lastUpdatedDate}} </b></h4>
+<!--             <button type="button" class="btn btn-primary" (click)="resumeUpload($event)"> -->
+<!--                   <i class="icon-upload icon-white"></i> Resume Upload -->
+<!--             </button> -->
+          </div>
+        
+<!--         <div class="panel-body"> -->
+<!--           <p>Your files are being uploaded to a staging environment before being sent to Amazon S3.</p> -->
+<!--           <hr> -->
+<!--           <ul class="list-group"> -->
+<!--             <li class="list-group-item">{{currentTask.message}}</li> -->
+<!--             <li class="list-group-item">{{currentTask.lastUpdatedDate}}</li> -->
+<!--           </ul> -->
+<!--         </div> -->
+<!--         <table class="table" style="0 30px 0 30px">  -->
+<!--           <thead>  -->
+<!--             <tr>  -->
+<!--               <th>Status</th> <th>Message</th> <th>Last Activity</th>  -->
+<!--             </tr>  -->
+<!--           </thead>  -->
+<!--           <tbody>  -->
+<!--             <tr>  -->
+<!--               <td>{{currentTask.status}}</td>  -->
+<!--               <td>{{currentTask.message}}</td>  -->
+<!--               <td>{{currentTask.lastUpdatedDate}}</td>  -->
+<!--             </tr>  -->
+<!--           </tbody>  -->
+<!--         </table> -->
+      </div>
+    
       <div #uploader></div>
       <button type="button" [ngClass]="{disabled : (values.collection == null && values.name == null || disabled)}" class="btn btn-primary" (click)="handleUpload($event)">
         <i class="icon-upload icon-white"></i> Upload
