--- a/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/user-profile.component.html
@@ -63,10 +63,11 @@
                     <div class="panel-heading">
                       <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapse{{i}}">
-                        <ul class="list-inline" style="margin: 0;">
-                          <li>{{task.label}}</li>
-                          <li *ngIf="task.status !== 'Complete'" class="pull-right" style="color:green;"><b>{{task.status}}...</b></li>
-                        </ul>
+                          <ul class="list-inline" style="margin: 0;">
+                            <li>{{task.label}}</li>
+                            <li *ngIf="task.status !== 'Complete'" class="pull-right" style="color:green;"><b>{{task.status}}...</b> Last Update: <b>{{task.lastUpdateDate}}</b></li>
+                            <li *ngIf="task.status === 'Complete'" class="pull-right" style="color:grey;"> Uploaded On: <b>{{task.lastUpdateDate}}</b></li>
+                          </ul>
                         </a>
                       </h4>
                     </div>
