better upload functionality

--- a/uasdm-web/src/main/ng2/src/app/management/upload.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/upload.component.html
@@ -1,8 +1,39 @@
 <uasdm-header [title]="'Data Upload'"></uasdm-header>
 
 <div id="app-container" class="container">
+  <div *ngIf="message != null" class="error-container">
+      <div class="label-holder">
+        <strong>Error</strong>
+      </div>
+      <div class="holder">
+        <div>
+          <p class="error-message">{{message}}</p>
+        </div>
+      </div>
+    </div>
+  
+  
   <div *ngIf="sites.length > 0" class="row">
-    <div class="col" [hidden]="disabled">
+    
+    <div class="col" *ngIf="existingTask && !currentTask">
+      <div class="panel panel-warning" style="margin: 30px 0 30px 0;">
+        <div class="panel-heading" style="font-size: 20px;">Partial Upload Detected</div>
+          <div class="panel-body">
+            <h4>A partial upload was detected. You can either cancel that partial upload or attempt to continue.</h4>
+            <h4><b>To continue an upload</b> please click the Continue Upload button and re-upload your file and we will try our best to continue where you left off.</h4>
+            
+            <hr>
+            <button type="button" class="btn btn-danger" style="margin-top: 20px;" (click)="removeUpload($event)">
+              <i class="icon-upload icon-white"></i> Cancel Upload
+            </button>
+            <button type="button" class="btn btn-primary" style="margin-top: 20px;" (click)="showUploadPanel()">
+              <i class="icon-upload icon-white"></i> Continue Upload
+            </button>
+          </div>
+      </div>
+    </div>
+    
+    <div class="col" *ngIf="!disabled && !existingTask">
       <div class="form-group">
         <label for="site">Site:</label>
         <select name="site" (change)="onSiteSelect($event.target.value)">
@@ -48,7 +79,7 @@
         </select>
       </div>
     </div>
-    <div class="col">
+    <div class="col" [hidden]="!uploadVisible">
     
       <div *ngIf="currentTask" class="panel panel-success" style="margin: 30px 0 30px 0;">
         <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
@@ -56,37 +87,11 @@
             <h4>Message: <b> {{currentTask.message}} </b></h4>
             <h4>Upload Started On: <b> {{currentTask.createDate}} </b></h4>
             <h4>Last Updated: <b> {{currentTask.lastUpdatedDate}} </b></h4>
-<!--             <button type="button" class="btn btn-primary" (click)="resumeUpload($event)"> -->
-<!--                   <i class="icon-upload icon-white"></i> Resume Upload -->
-<!--             </button> -->
           </div>
-        
-<!--         <div class="panel-body"> -->
-<!--           <p>Your files are being uploaded to a staging environment before being sent to Amazon S3.</p> -->
-<!--           <hr> -->
-<!--           <ul class="list-group"> -->
-<!--             <li class="list-group-item">{{currentTask.message}}</li> -->
-<!--             <li class="list-group-item">{{currentTask.lastUpdatedDate}}</li> -->
-<!--           </ul> -->
-<!--         </div> -->
-<!--         <table class="table" style="0 30px 0 30px">  -->
-<!--           <thead>  -->
-<!--             <tr>  -->
-<!--               <th>Status</th> <th>Message</th> <th>Last Activity</th>  -->
-<!--             </tr>  -->
-<!--           </thead>  -->
-<!--           <tbody>  -->
-<!--             <tr>  -->
-<!--               <td>{{currentTask.status}}</td>  -->
-<!--               <td>{{currentTask.message}}</td>  -->
-<!--               <td>{{currentTask.lastUpdatedDate}}</td>  -->
-<!--             </tr>  -->
-<!--           </tbody>  -->
-<!--         </table> -->
       </div>
     
       <div #uploader></div>
-      <button type="button" [ngClass]="{disabled : (values.collection == null && values.name == null || disabled)}" class="btn btn-primary" (click)="handleUpload($event)">
+      <button type="button btn btn-primary" [ngClass]="{disabled : ( (values.collection == null && values.name == null || disabled ) && !existingTask)}" class="btn btn-primary" style="margin-top: 20px;" (click)="handleUpload($event)">
         <i class="icon-upload icon-white"></i> Upload
       </button>
     </div>
