--- a/uasdm-web/src/main/ng2/src/app/management/modals/error-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/modals/error-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-body text-center">
+<div class="modal-body error-modal text-center">
   <p>{{message}}</p>
   <button type="button" class="btn btn-default" (click)="bsModalRef.hide()" >Close</button>
 </div>
