--- a/uasdm-web/src/main/ng2/src/app/header.component.html
+++ b/uasdm-web/src/main/ng2/src/app/header.component.html
@@ -13,12 +13,12 @@
             Menu<span class="caret"></span>
           </a>    
           <ul *dropdownMenu class="dropdown-menu">
-            <li role="menuitem"><a class="dropdown-item" routerLink="/tasks" routerLinkActive="active">Tasks</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/search" routerLinkActive="active">Search</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/upload" routerLinkActive="active">Upload</a></li>
-            <li role="menuitem"><a class="dropdown-item" routerLink="/viewer" routerLinkActive="active">Data Viewer</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/tasks" routerLinkActive="active">Manage Your Tasks</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/upload" routerLinkActive="active">Upload Data</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/search" routerLinkActive="active">Search Archived Data</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="/viewer" routerLinkActive="active">View Data</a></li>
 <!--             <li role="menuitem"><a class="dropdown-item" routerLink="/" routerLinkActive="active">Help</a></li> -->
-            <li *ngIf="admin" role="menuitem"><a class="dropdown-item" routerLink="/projects" routerLinkActive="active">Projects</a></li>
+            <li *ngIf="admin" role="menuitem"><a class="dropdown-item" routerLink="/projects" routerLinkActive="active">Manage Projects</a></li>
             <li role="menuitem"><a class="dropdown-item" href="{{context}}/session/logout">Log out</a></li>
           </ul>
         </li>
