--- a/uasdm-web/src/main/ng2/src/app/management/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/management/projects.component.html
@@ -5,20 +5,46 @@
 <!--     <h2>Project Management</h2> -->
 <!--   </div> -->
   <div class="row">
-    <div *ngIf="nodes.length > 0" class="tree">
-      <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
-        <ng-template #treeNodeTemplate let-node let-index="index">
-          <span>{{ node.data.name }}</span>
-          <i class="fa fa-folder" *ngIf="!isData(node)"></i>
-        </ng-template>
-      </tree-root>
-    </div>  
+    <div class="col-md-2">  
+      <div class="row">
+        <button (click)="handleCreate()" class="btn btn-primary">Create new site</button>
+        <hr>
+      </div>    
+      <div class="row">
+        <div *ngIf="nodes.length > 0" class="tree">
+          <tree-root [nodes]="nodes" [options]="options" (updateData)="handleOnUpdateData()">
+            <ng-template #treeNodeTemplate let-node let-index="index">
+              <span>{{ node.data.name }}</span>
+              <i class="fa fa-folder" *ngIf="!isData(node)"></i>
+            </ng-template>
+          </tree-root>
+        </div>  
+      </div>    
+    </div>
+    <div class="col-md-10">
+      <div id="map" style="height: 500px; width:900px; " ></div>
+    </div>    
   </div>
 </div>
 
 <context-menu #nodeMenu>
   <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)">
     Edit {{item?.data.name}}
+  </ng-template>
+  <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)">
+    Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}}
+  </ng-template>
+  <ng-template contextMenuItem let-item (execute)="handleDelete($event.item)">
+    Delete {{item?.data.name}}
+  </ng-template>
+</context-menu>
+
+<context-menu #siteMenu>
+  <ng-template contextMenuItem let-item (execute)="handleEdit($event.item)">
+    Edit {{item?.data.name}}
+  </ng-template>
+  <ng-template contextMenuItem let-item (execute)="handleEditGeom($event.item)">
+    Edit geometry for {{item?.data.name}}
   </ng-template>
   <ng-template contextMenuItem let-item (execute)="handleCreate($event.item)">
     Add a {{item?.data.childType.toLowerCase()}} to {{item?.data.name}}
